--- a/azure-go-sdk-conceptual/TOC.yml
+++ b/azure-go-sdk-conceptual/TOC.yml
@@ -19,7 +19,18 @@ items:
         href: /azure/mysql/connect-go?toc=%2fgo%2fazure%2ftoc.json
       - name: 連接字串
         href: /azure/sql-database/sql-database-connect-query-go?toc=%2fgo%2fazure%2ftoc.json
-  - name: 範例
-    href: 'http://github.com/azure-samples/azure-sdk-for-go-samples'
+  - name: Go Code 範例
+    items:
+      - name: 驗證和 Active Directory
+        href: azure-sdk-go-auth-aad-samples.md
+      - name: 容器
+        href: azure-sdk-go-containers-samples.md
+      - name: 計算和網路
+        href: azure-sdk-go-compute-networking-samples.md
+      - name: 連接字串
+        href: azure-sdk-go-sql-database-samples.md
+      - name: 所有 Go 範例
+        href: 'http://github.com/azure-samples/azure-sdk-for-go-samples'
+    href: null
   - name: API 參考資料
     href: 'https://godoc.org/github.com/Azure/azure-sdk-for-go'
