--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,17 +1,5 @@
 {
-  "docsets_to_publish": [
-    {
-      "docset_name": "azure-go-sdk-conceptual",
-      "build_source_folder": "azure-go-sdk-conceptual",
-      "build_output_subfolder": "azure-go-sdk-conceptual",
-      "locale": "zh-TW",
-      "monikers": [],
-      "moniker_ranges": [],
-      "open_to_public_contributors": false,
-      "build_entry_point": "docs",
-      "template_folder": "_themes"
-    }
-  ],
+  "docsets_to_publish": [],
   "notification_subscribers": [],
   "branches_to_filter": [
     "master-sxs",
